--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Files to ignore when considering what GIT should commit.
-
-# Visual Studio 
+# Visual Studio (Code)
+.vscode/
+.vs/
 *.suo
 *.user
 *.sln.docstates
