Fix Compilimation (HOPEFULLY)

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ game/client/client_hl2mp.vcxproj.filters
 game/client/client_hl2mp.vcxproj.vpc_crc
 game/server/server_hl2mp.vcxproj
 game/server/server_hl2mp.vcxproj.vpc_crc
+lib
