--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib"]
+[submodule "src/lib"]
 	path = src/lib
-	url = https://github.com/ChaosBoxGame/lib
+	url = https://github.com/Chaos-Game-s/lib
